feat: 리펙토링 및 README.md 자아성찰 추가..